--- a/views/public/html/add-c-contract.html
+++ b/views/public/html/add-c-contract.html
@@ -1015,11 +1015,17 @@
                                       </div>
                                   </div>
                                   <div class="col-md-6">
-                                      <div class="form-floating">
-                                          <input name="bondStore" type="text" id="contract_bond_store" class="form-control"/>
-                                          <label for="contract_bond_store">Bond Store</label>
-                                      </div>
+                                    <div class="form-floating">
+                                        <input name="bondStore" type="text" id="contract_bond_store" class="form-control"/>
+                                        <label for="contract_bond_store">Bond Store</label>
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                  <div class="form-floating">
+                                      <input name="cdc_passport" type="text" id="cdc_passport" class="form-control"/>
+                                      <label for="cdc_passport">CDC / Passport No</label>
                                   </div>
+                              </div>
                               </div>
 
                                 
