--- a/views/public/html/edit-c-contract.html
+++ b/views/public/html/edit-c-contract.html
@@ -978,6 +978,12 @@
                                         <label for="contract_bond_store">Bond Store</label>
                                     </div>
                                 </div>
+                                <div class="col-md-6">
+                                  <div class="form-floating">
+                                      <input name="cdc_passport" type="text" id="cdc_passport" class="form-control"/>
+                                      <label for="cdc_passport">CDC / Passport No</label>
+                                  </div>
+                              </div>
                             </div>
           
                               <div class="card-footer text-end mt-0 pt-0 mb-0 pb-0   pe-0">
