--- a/views/public/html/view-candidate.html
+++ b/views/public/html/view-candidate.html
@@ -991,6 +991,7 @@
                                                             <th scope="col">otherDeductions</th>
                                                             <th scope="col">training</th>
                                                             <th scope="col">bondStore</th>
+                                                            <th scope="col">CDC&nbsp;/&nbsp;Passport&nbsp;No</th>
                                                           <th scope="col">Duration&nbsp;of&nbsp;Contract</th>
                                                           <th scope="col">Period&nbsp;Onboard</th>
                                                           <th scope="col" >Actions</th>
